# scx-analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ring_buffer.cc  ring_buffer.h  scx_analyzer.cc  scx_defs.h  scx_wrapper.cc  scx_wrapper.h  utils.h  vmlinux__.h
app/bench_task/: Cargo.toml
app/bench_task/src/: main.rs
app/bench_task/src/bench/: cache.rs  float.rs  int.rs  mod.rs
app/dag_task/: Cargo.toml  README.md
app/dag_task/src/: HEFT.rs  HLBS.rs  dag.rs  main.rs
app/edf_task/: Cargo.toml
app/edf_task/src/: main.rs
app/statcli/: Cargo.toml
app/statcli/src/: main.rs
app/utils/: Cargo.toml  TODO.md
app/utils/src/: lib.rs  thread.rs
app/utils/src/bpf/: map.rs  mod.rs  task_storage.rs  urb.rs
scheduler/: .gitignore  Cargo.toml  README.md  build.rs  set-IRQs-affinity.sh  visualizer_sched_hint.py
scheduler/src/: main.rs
scheduler/src/bpf/: dag_bpf_kfuncs.bpf.h  exec_time_estimator.bpf.c  exec_time_estimator.bpf.h  intf.h  isolcpus.bpf.c  logger.bpf.c  logger.bpf.h  main.bpf.c  sched.bpf.c  sched.bpf.h  stat.bpf.c  stat.bpf.h  stats.bpf.c  stats.bpf.h  tracepoints.bpf.c  utils.bpf.h
scheduler/src/bpf/scheds/: template.bpf.c
