[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
libc = "0.2"
libbpf-cargo = "0.24"
libbpf-rs = "=0.24"
libbpf-sys = "=1.4.5+v1.4.5"
scx_utils = "1.0"
scx_stats = "1.0"
ctrlc = "3.4"
plain = "0.2"
prettytable-rs = "0.6"
clap = "4.5"

[build-dependencies]
scx_utils = "1.0"
