[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow		= "1.0.95"
libc		= "0.2.169"
libbpf-cargo	= "0.24.8"
libbpf-rs	= "0.24.8"
libbpf-sys	= "=1.4.6"
scx_utils	= "1.0.10"
scx_stats	= "1.0.8"
ctrlc		= "3.4.5"
plain		= "0.2.3"
prettytable-rs	= "0.10.0"
clap		= "4.5.27"

[build-dependencies]
scx_utils	= "1.0.10"
